# nsf-herd-ai-opensource

./: .gitignore  README.md  analyze_schema.py  config.yml  downloader.py  etl.py  generate_mapping.py  local_agent.py  main.py  mapping.json  pyproject.toml  schema_changes_detailed.csv  server.py
